<resources>
    <string name="app_name">Succulent Shop</string>
    <string name="email_or_username">Email or Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="create_an_account">Create an account</string>
    <string name="this_field_is_required">This field is required.</string>
    <string name="identifier_is_too_short">Identifier is too short.</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_have_an_account">ALREADY HAVE AN ACCOUNT?</string>
    <string name="password_required">Password is required.</string>
    <string name="password_short">Password is too short</string>
    <string name="password_long">Password is too long</string>
    <string name="password_contain">Password must contain one digit, one uppercase letter, one lowercase letter and one special character.</string>
    <string name="email_invalid">Email is invalid.</string>
    <string name="email_required">Email is required.</string>
    <string name="username_required">Username required.</string>
    <string name="username_regex">Username can only include a-z, 0-9 and _ characters.</string>
    <string name="username_short">Username is too short.</string>
    <string name="username_long">Username is too long.</string>
</resources>